# is-osm-uptodate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  README.md  benchmark.py  docker-compose.yml  fly.toml  is-osm-uptodate.py  pyproject.toml  requirements.txt  run_tests.sh  uwsgi.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yml
conf/: uwsgi.ini
docker/: Dockerfile  docker-compose.yml
docs/: INSTALL.md
redis/: Dockerfile  fly.toml  redis.conf
scripts/: run_docker.sh  run_tests.sh
server/: __init__.py  app.py  feature.py  geojson.py  process.py  sentry.py  static.py  statistics.py  tile.py  utils.py
tests/: Dockerfile  __init__.py  common.py  requirements.txt  run_tests.sh  test_api.py  test_base.py  test_webapp.py
web/: .eslintrc.json  geojson.js  index.html  map.css  package-lock.json  package.json  webpack.config.js
web/src/: bar.css  bar.js  constants.js  geojson.js  main.css  main.js  map.css  map.js
web/src/components/: actions.js  criteria.js  download.js  settings.js  statistics.js
