[project]
name = "is-osm-uptodate"
version = "1.9"
description = "Find outdated nodes in OpenStreetMap"
authors = [
    {name = "Francesco Frassinelli", email = "fraph24@gmail.com"},
]
dependencies = [
    "Flask<3.0.0,>=2.0.1",
    "jsonslicer<1.0.0,>=0.1.7",
    "simplejson<4.0.0,>=3.17.2",
    "uWSGI<3.0.0,>=2.0.19",
    "mercantile>=1.2.1",
    "redis>=4.2.2",
    "walrus>=0.9.1",
    "matplotlib>=3.5.1",
    "pypng>=0.0.21",
]
requires-python = ">=3.8,<4.0"
license = {text = "AGPLv3"}

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
test = [
    "seleniumbase~=1.63",
]

[tool.pdm.scripts]
npm = {shell = "cd web && npm ci && npm run build"}
web = "uwsgi --ini uwsgi.ini"
develop = "python is-osm-uptodate.py"
test = "pytest --browser=firefox --save_screenshot tests/"
lint = "pre-commit run --all-files"
docker_build = "docker compose -f docker/docker-compose.yml --profile dev build"
docker_run = "docker compose -f docker/docker-compose.yml --profile dev up"
docker_stop = "docker compose -f docker/docker-compose.yml down"
docker_test = "docker compose -f docker/docker-compose.yml --profile test run test"

[tool.black]
line-length = 79

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"

[project.urls]
Homepage = "is-osm-uptodate.frafra.eu"
Repository = "github.com/frafra/is-osm-uptodate"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
