[project]
name = "is-osm-uptodate"
version = "2.2.0"
description = "Find outdated nodes in OpenStreetMap"
authors = [
    {name = "Francesco Frassinelli", email = "fraph24@gmail.com"},
]
dependencies = [
    "jsonslicer<1.0.0,>=0.1.7",
    "simplejson<4.0.0,>=3.17.2",
    "mercantile>=1.2.1",
    "redis>=4.2.2",
    "walrus>=0.9.1",
    "matplotlib>=3.5.1",
    "pypng>=0.0.21",
    "aiohttp>=3.8.1",
    "gunicorn>=20.1.0",
    "sentry-sdk>=1.5.12",
    "shapely>=2.0.0",
]
requires-python = ">=3.10,<4.0"
license = {text = "AGPLv3"}

[dependency-groups]
dev = [
    "seleniumbase~=v4.38",
]

[tool.ruff]
fix = true

[project.urls]
Homepage = "is-osm-uptodate.frafra.eu"
Repository = "github.com/frafra/is-osm-uptodate"
